kubernetes/apps/kind/nginx/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nginx
  labels:
    istio-injection: enabled
spec: {}
status: {}
