kubernetes/apps/kind/nginx/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  template:
    spec:
      containers:
      - name: istio-proxy
        image: auto
        resources:
          requests:
            cpu: 50m
            memory: 112Mi
        securityContext:
          allowPrivilegeEscalation: false
      - name: nginx
        resources:
          requests:
            cpu: 200m
            memory: 400Mi
