kubernetes/apps/kind/nginx/allow-ingress-to-nginx.yaml
# allow ingress from gateway to nginx
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-ingress-to-nginx
spec:
  selector:
    matchLabels:
      app: nginx
  action: ALLOW
  rules:
  - from:
    - source:
        # <trust-domain>/ns/<namespace>/sa/<service-account-name>
        principals: ["cluster.local/ns/istio-ingress/sa/istio-ingressgateway"]
